2015-12-16  Holger Schulz  <holger.schulz@cern.ch>

	* Only calculate polynomials structure once per instance
	-> significant speed increase

	* Add the brute force grid scan (--scan) to prof2-tune


2015-12-11  Holger Schulz  <holger.schulz@cern.ch>

	* Minimiser tweaks --- no more need for param translation,
	make strategy steerable (--strategy or -s), -q suppresses
	iminuit output now, calculation and writing of correlation
	matrix into results, dump weights into results file

2015-12-10  Holger Schulz  <holger.schulz@cern.ch>

	* Undo ui madness

	* Remove numpy dependence (except sampling.py)

	* Add prof-sens for sensitivity plotting exploting derivatives

2015-12-09  Holger Schulz  <holger.schulz@cern.ch>

	* Can specify PREFIX when calling make

2015-12-09  Andy Buckley  <andy.buckley@cern.ch>

	* Improve prof2-predict UI.

	* Add metadata printing in prof2-lsipol debug mode.

	* Add -v and -q flag shortcuts to all scripts.

2015-12-07  Holger Schulz  <holger.schulz@cern.ch>

	* Use __all__ in __init__.py 

	* Started sphinx documentation
	
	* Support only iminuit, bump version to 2.2.alpha, restructure imports

	* Sanity checks when calling parametrisation

2015-12-03  Andy Buckley  <andy.buckley@cern.ch>

	* Provide a version() function in the C++ library, and map it into
	Python. Both sources use the VERSION variable defined in the
	Makefile at build time.

	* Reduce SVD fitting threshold to 1e-20.

2015-12-03  Holger Schulz  <holger.schulz@cern.ch>

	* Make derivative calculation work also when scaling params
	
	* Let YODA write YODA

2015-12-02  Holger Schulz  <holger.schulz@cern.ch>

	* Derivative calculation

2015-11-28  Andy Buckley  <andy.buckley@cern.ch>

	* Version 2.1.2

	* Revert range shift in Ipol.cc, since it produced (small)
	numerical errors rather than improved stability. To be
	understood...

	* Add test/mkpolydata script, for generating polynomial pseudodata
	used in closure tests.

2015-11-27  Andy Buckley  <andy.buckley@cern.ch>
