@@ -1,3 +1,9 @@
+2016-02-10  Holger Schulz  <holger.schulz@cern.ch>
+
+	* First version of prof2-runcombs plus sampling functions
+	salvaged from Prof1, modified to have no scipy dependence
+
+
 2015-12-16  Holger Schulz  <holger.schulz@cern.ch>
 
 	* Only calculate polynomials structure once per instance
